--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fb Auth</title>
 </head>
+
 <body>
     <button id="fb-btn">Continue With Facebook</button>
+
+    <!-- <script type="module" src="@js/firebase.config.js"></script>
+    <script type="module" src="@js/auth.js"></script> -->
+
+    <script type="module">
+        // firebase config js
+
+
+
+        // Import the functions you need from the SDKs you need
+        // import { initializeApp } from "firebase/app";
+        // import { getAuth } from "firebase/auth";
+
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-app.js";
+
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDDnln-2XiSe-IrBbrNjoDcJdrsJtY5Pbk",
+            authDomain: "fbauth-btn.firebaseapp.com",
+            projectId: "fbauth-btn",
+            storageBucket: "fbauth-btn.appspot.com",
+            messagingSenderId: "1023638936523",
+            appId: "1:1023638936523:web:ffb3f3e57c32ac8ddf344e"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app)
+
+
+
+
+
+
+        // btn related
+
+        import { getAuth, FacebookAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-auth.js";
+
+
+        const btn = document.getElementById("fb-btn")
+
+        // provider
+        const provider = new FacebookAuthProvider();
+
+        btn.addEventListener("click", () => {
+            signInWithPopup(auth, provider)
+                .then((result) => {
+                    // The signed-in user info.
+                    const user = result.user;
+
+                    // This gives you a Facebook Access Token. You can use it to access the Facebook API.
+                    const credential = FacebookAuthProvider.credentialFromResult(result);
+                    const accessToken = credential.accessToken;
+
+                    // IdP data available using getAdditionalUserInfo(result)
+                    // ...
+                })
+                .catch((error) => {
+                    // Handle Errors here.
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    // The email of the user's account used.
+                    const email = error.customData.email;
+                    // The AuthCredential type that was used.
+                    const credential = FacebookAuthProvider.credentialFromError(error);
+
+                    // ...
+                });
+        })
+
+    </script>
 </body>
+
 </html>
